  * Improve error message in dpkg-gencontrol and dpkg-gensymbols when
    debian/control does not have any package stanza. Closes: #642473
    Based on a patch by Kyle Willmon <kylewillmon@gmail.com>.
  * Add Pre-Depends on tar >= 1.23 (satisfied in stable) to dpkg due to it
    using the ‘--warning=no-timestamp’ option. Closes: 642802

  [ Raphaël Hertzog ]
  * Update Dpkg::Shlibs to look into multiarch paths when cross-building
    too. Closes: #595144

  [ Jonathan Nieder ]
  * Bump po4a version in Build-Depends to 0.41, since earlier versions do
    not handle --srcdir correctly.

  [ Updated dpkg translations ]
  * Italian (Milo Casagrande). Closes: #627832

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #636238

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #643969

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 23 Sep 2011 17:29:38 +0200

dpkg (1.16.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Dpkg::Deps: Implement new "reset" method and bump module version to 1.01
    due to this.
  * Improved description of --search in dpkg-query(1). Closes: #621066
    Thanks to Lars Buitinck <larsmans@gmail.com> for the patch.
  * Let update-alternatives fsync() its administrative files before
    moving them in place to avoid empty files with some filesystems.
    LP: #344019
  * Tighten the regexp used by dpkg-source to ignore the .pc directory of
    quilt. Thanks to Mike Hommey for noticing the problem.
  * Change behaviour of dpkg-source's --extend-diff-ignore to also
    extend the current diff-ignore if it has already been set.
  * Fix dependency checking code to consider a dependency on a virtual
    package provided by a package in triggers-pending status as satisfied.
  * Do not fail when encountering a pre-dependency in triggers-awaited state,
    instead process the awaited triggers. Closes: #526774